--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bashmnt2.0",
+  "name": "fortress",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@atproto/api": "^0.13.31",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.4",
@@ -19,12 +21,15 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.23",
     "appwrite": "^15.0.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.427.0",
     "nodemon": "^3.1.9",
     "openai": "^4.56.0",
@@ -39,7 +44,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
-    "@types/node": "^22.2.0",
+    "@shadcn/ui": "^0.0.4",
+    "@types/node": "^22.10.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -51,7 +57,8 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.9",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.5.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.0"
   }
