--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.427.0",
     "nodemon": "^3.1.9",
