--- a/vercel.json
+++ b/vercel.json
@@ -11,12 +11,12 @@
   ],
   "routes": [
     {
-      "src": "/api/appwrite/(.*)",
+      "src": "/v1/(.*)",
       "dest": "https://cloud.appwrite.io/v1/$1",
       "headers": {
-        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Origin": "https://www.livity.app",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept, Authorization, X-Appwrite-Project, X-Appwrite-Key",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Appwrite-Project, X-Appwrite-Key",
         "Access-Control-Allow-Credentials": "true"
       }
     },
