--- a/vercel.json
+++ b/vercel.json
@@ -21,6 +21,20 @@
       }
     },
     {
+      "src": "^/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "^/src/(.*\\.(?:js|jsx|ts|tsx))",
+      "dest": "/src/$1",
+      "headers": {
+        "Content-Type": "application/javascript"
+      }
+    },
+    {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html",
       "headers": {
