--- a/vercel.json
+++ b/vercel.json
@@ -14,10 +14,11 @@
       "src": "/v1/(.*)",
       "dest": "https://cloud.appwrite.io/v1/$1",
       "headers": {
-        "Access-Control-Allow-Origin": "https://www.livity.app",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Appwrite-Project, X-Appwrite-Key",
-        "Access-Control-Allow-Credentials": "true"
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Appwrite-Project, X-Appwrite-Key, X-Appwrite-Response-Format",
+        "Access-Control-Allow-Credentials": "true",
+        "Access-Control-Max-Age": "86400"
       }
     },
     {
